@@ -1,5 +1,7 @@
 Revision history for Module::Provision                           .
 
+          - Boilerplate now also pattern matches hosts
+
 0.41.1    2016-04-04 13:14:24
           - Setting LWP::Protocol::https version to 0
             Ten months RT#104150. Module abandoned?
